--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
     		<artifactId>mybatis</artifactId>
     		<version>3.5.19</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+    		<artifactId>mybatis-spring-boot-starter</artifactId>
+   			 <version>3.0.3</version>
+</dependency>
 	</dependencies>
 
 	<build>
