--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,12 @@
 			<groupId>org.mybatis.spring.boot</groupId>
     		<artifactId>mybatis-spring-boot-starter</artifactId>
    			 <version>3.0.3</version>
-</dependency>
+		</dependency>
+		<dependency>
+    		<groupId>de.svenkubiak</groupId>
+   	 		<artifactId>jBCrypt</artifactId>
+    		<version>0.4.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
